<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main activity -->
    <string name="button_words">Слова</string>
    <string name="button_settings">Настройки</string>
    <string name="button_exit">Выход</string>

    <!-- Words activity -->
    <string name="add_word">Добавить</string>
    <string name="delete_word">Удалить</string>
    <string name="words_list">Список</string>
    <string name="word">Слово</string>
    <string name="word_description">Описание</string>
    <string name="edit_description">Редактировать</string>
    <string name="amount">Общее количество</string>
    <string name="back">Назад</string>
    <string name="forward">Вперед</string>

    <!-- Form activity -->
    <string name="description">Описание</string>
    <string name="translation">Перевод</string>
    <string name="cancel">Отмена</string>

    <!-- List activity -->
    <string name="en">Английский</string>
    <string name="en_rus">Англо-Русский</string>
    <string name="rus">Русский</string>
    <string name="app_name">Remember Words</string>
    <string name="search">Поиск</string>
    <string name="search_result">Результат поиска: </string>
    
    <!-- Some settings activity -->
    <string name="check_box">Запоминать последнее слово</string>
    <string name="write_db_to_Sdcard">Записать слова на SD карту</string>
    <string name="read_db_from_SDcard">Прочитать слова с SD карты</string>
    <string name="delete_all_words">Удалить все записи</string>
    
    <!-- Other -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_words">WordsActivity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_pref">PrefActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_some_settings">MainActivity</string>

</resources>
