<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/words_color"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context="com.rememberwords.WordsActivity" >

    <LinearLayout
        android:id="@+id/layout_word"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/card_corner" >

        <TextView
            android:id="@+id/tvWordNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:text="@string/word"
            android:textColor="#ff0090ff"
            android:textSize="20sp" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/word"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ff00ff00"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWordDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="top|center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffff9000" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <ImageButton
                android:id="@+id/imgBtnForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/imgBtnBack"
                android:background="@drawable/arrow_selector"
                android:contentDescription="@string/forward"
                android:src="@drawable/forward" />

            <ImageButton
                android:id="@+id/imgBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_selector"
                android:contentDescription="@string/back"
                android:src="@drawable/back" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnWordDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/description_selector"
                android:text="@string/word_description"
                android:textColor="#ffffff" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnWordsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/list_selector"
                android:text="@string/words_list"
                android:textColor="#ffffff" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>